--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prisma:migrate": "prisma migrate --schema ./infra/db/schema.prisma"
+  },
+  "prisma": {
+    "schema": "./infra/db/schema.prisma",
+    "seed": "ts-node infra/db/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
@@ -13,6 +19,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
     "nodemon": "^3.1.7",
+    "prisma": "^5.21.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
