--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,13 +1,16 @@
-FROM node:18-slim
+FROM node:23-slim
+
+RUN apt-get update -y && apt-get install -y openssl
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json yarn.lock ./
+COPY infra/db ./infra/db
 
-RUN npm install
+RUN yarn
 
 COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "run", "dev"]
+CMD ["yarn", "dev"]
