--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tsc",
     "prisma:generate": "prisma generate --schema ./infra/db/schema.prisma",
-    "prisma:migrate": "prisma migrate --schema ./infra/db/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema ./infra/db/schema.prisma",
     "postinstall": "yarn prisma:generate"
   },
   "prisma": {
