--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "tsc",
     "prisma:generate": "prisma generate --schema ./infra/db/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema ./infra/db/schema.prisma",
+    "prisma:reset": "prisma migrate reset --schema ./infra/db/schema.prisma",
     "postinstall": "yarn prisma:generate"
   },
   "prisma": {
