--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "prisma:generate": "prisma generate --schema ./infra/db/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema ./infra/db/schema.prisma",
     "prisma:reset": "prisma migrate reset --schema ./infra/db/schema.prisma",
-    "postinstall": "yarn prisma:generate"
+    "postinstall": "yarn prisma:generate",
+    "engagements:generator": "ts-node src/scripts/insertRandomEngagements.ts"
   },
   "prisma": {
     "schema": "./infra/db/schema.prisma",
