feat: add new script to insert a single engagement point

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prisma:migrate": "prisma migrate dev --schema ./infra/db/schema.prisma",
     "prisma:reset": "prisma migrate reset --schema ./infra/db/schema.prisma",
     "postinstall": "yarn prisma:generate",
-    "engagements:generator": "ts-node src/scripts/insertRandomEngagements.ts"
+    "engagements:generator": "ts-node src/scripts/insertRandomEngagements.ts",
+    "engagements:single": "ts-node src/scripts/insertSingleRandomEngagement.ts"
   },
   "prisma": {
     "schema": "./infra/db/schema.prisma",
